# utoipa

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  coverage.sh  justfile
examples/actix-web-multipart/: Cargo.toml  README.md
examples/actix-web-multipart/src/: main.rs
examples/actix-web-scopes-binding/: Cargo.toml  README.md
examples/actix-web-scopes-binding/src/: main.rs
examples/axum-multipart/: Cargo.toml  README.md
examples/axum-multipart/src/: main.rs
examples/axum-utoipa-bindings/: Cargo.toml  README.md
examples/axum-utoipa-bindings/src/: main.rs
examples/axum-utoipa-nesting-vendored/: Cargo.toml  Dockerfile  README.md  axum-docker
examples/axum-utoipa-nesting-vendored/src/: main.rs
examples/generics-actix/: Cargo.toml  README.md
examples/generics-actix/src/: main.rs
examples/hyperlane-openapi/: Cargo.toml
examples/hyperlane-openapi/.cargo/: config.toml
examples/hyperlane-openapi/src/: main.rs
examples/raw-json-actix/: Cargo.toml  README.md
examples/raw-json-actix/src/: main.rs
examples/rocket-0_4-hello/: Cargo.toml  README.md
examples/rocket-0_4-hello/src/: main.rs
examples/rocket-todo/: Cargo.toml  README.md  REAMDE.md
examples/rocket-todo/src/: main.rs
examples/simple-axum/: Cargo.toml
examples/simple-axum/src/: main.rs
examples/simple-x-extensions/: Cargo.toml  README.md
examples/simple-x-extensions/src/: main.rs
examples/todo-actix/: Cargo.toml  README.md
examples/todo-actix/src/: main.rs  todo.rs
utoipa/: CHANGELOG.md  Cargo.toml
utoipa-actix-web/: CHANGELOG.md  Cargo.toml  README.md
utoipa-actix-web/src/: lib.rs  scope.rs  service_config.rs
utoipa-actix-web/testdata/: app_generated_openapi
utoipa-axum/: CHANGELOG.md  Cargo.toml  README.md
utoipa-axum/src/: lib.rs  router.rs
utoipa-axum/src/snapshots/: utoipa_axum__tests__axum_router.snap
utoipa-config/: CHANGELOG.md  Cargo.toml  README.md
utoipa-config/config-test-crate/: Cargo.toml  README.md  build.rs
utoipa-config/config-test-crate/src/: main.rs
utoipa-config/config-test-crate/tests/: config.rs
utoipa-config/src/: lib.rs
utoipa-corelib/: Cargo.toml
utoipa-corelib/src/: fn_arg.rs  lib.rs
utoipa-gen/: CHANGELOG.md  Cargo.toml
utoipa-gen-actix-web/: Cargo.toml
utoipa-gen-actix-web/src/: lib.rs
utoipa-gen-axum/: Cargo.toml
utoipa-gen-axum/src/: lib.rs
utoipa-gen-rocket/: Cargo.toml
utoipa-gen-rocket/src/: lib.rs
utoipa-gen/src/: argument.rs  attribute.rs  autocfg.rs  component.rs  component_experiment.rs  component_type.rs  doc_comment.rs  ext.rs  info.rs  into_params.rs  lib.rs  module.rs  openapi.rs  path.rs  path2.rs  paths.rs  request_body.rs  response.rs  schema.rs  schema_type.rs  security_requirement.rs  server.rs  token_stream.rs
utoipa-gen/src/component/: attr.rs  attribute.rs  capabilities.rs  features.rs  into_params.rs  schema.rs  serde.rs  xml.rs
utoipa-gen/src/ext/: actix.rs  auto_types.rs  axum.rs  mod.rs  rocket.rs
utoipa-gen/src/openapi/: info.rs
utoipa-gen/src/path/: example.rs  extensions.rs  handler.rs  media_type.rs  parameter.rs  property.rs  request_body.rs  response.rs  status.rs
utoipa-gen/src/schema/: component.rs  into_params.rs  schema.rs
utoipa-gen/src/snapshots/: doctest_lib_rs__schema.snap
utoipa-gen/tests/: common.rs  into_params_test.rs  modify_test.rs  openapi_derive.rs  openapi_derive_test.rs  path_derive.rs  path_derive_actix.rs  path_derive_actix_auto_responses.rs  path_derive_auto_into_responses.rs  path_derive_auto_into_responses_actix.rs  path_derive_auto_into_responses_axum.rs  path_derive_auto_types.rs  path_derive_auto_types_actix.rs  path_derive_auto_types_axum.rs  path_derive_axum_test.rs  path_derive_rocket.rs  path_parameter_derive_actix.rs  path_parameter_derive_test.rs  path_response_derive_test.rs  path_response_derive_test_no_serde_json.rs  raw_identifier.rs  request_body_derive_test.rs  response_derive_test.rs  schema_derive_no_serde_json.rs  schema_derive_test.rs  schema_generics.rs  serde_schema.rs  tagged_discriminator.rs  test_foobar.rs  utoipa_gen_test.rs
utoipa-gen/tests/snapshots/: openapi_derive__derive_generic_openapi_component_schemas.snap  openapi_derive__derive_logical_or_security_requirement.snap  openapi_derive__derive_merge_openapi_with_tags.snap  openapi_derive__derive_nest_openapi_with_tags.snap  openapi_derive__derive_openapi_with_custom_info.snap  openapi_derive__derive_openapi_with_generic_response.snap  openapi_derive__derive_openapi_with_generic_schema_with_as.snap  openapi_derive__derive_openapi_with_include_str_description.snap  openapi_derive__derive_openapi_with_include_str_description.snap.new  openapi_derive__derive_openapi_with_licence.snap  openapi_derive__derive_openapi_with_responses.snap  openapi_derive__derive_openapi_with_servers.snap  openapi_derive__openapi_resolvle_recursive_references.snap  openapi_derive__openapi_schemas_resolve_generic_enum_schema.snap  openapi_derive__openapi_schemas_resolve_schema_references.snap  path_derive__arbitrary_expr_in_operation_id.snap  path_derive__derive_images_as_application_octet_stream.snap  (+304 more)
utoipa-ntex/: Cargo.toml  README.md
utoipa-ntex/src/: handler.rs  lib.rs  scope.rs  service_config.rs
utoipa-ntex/testdata/: app_generated_openapi
utoipa-rapidoc/: CHANGELOG.md  Cargo.toml  README.md
utoipa-rapidoc/res/: rapidoc.html
utoipa-rapidoc/src/: lib.rs
utoipa-redoc/: CHANGELOG.md  Cargo.toml  README.md
utoipa-redoc/res/: redoc.html
utoipa-redoc/src/: actix.rs  axum.rs  lib.rs  rocket.rs
utoipa-scalar/: CHANAGELOG.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
utoipa-scalar/res/: api-reference.js  scalar.html
utoipa-scalar/src/: actix.rs  axum.rs  lib.rs  rocket.rs
utoipa-swagger-ui/: CHANGELOG.md  Cargo.toml  README.md  build.rs
utoipa-swagger-ui-vendored/: CHANGELOG.md  Cargo.toml  README.md
utoipa-swagger-ui-vendored/src/: lib.rs
utoipa-swagger-ui/src/: actix.rs  axum.rs  lib.rs  oauth.rs  rocket.rs
utoipa-warp/: Cargo.toml  README.md
utoipa-warp/src/: lib.rs  router.rs  serving.rs
utoipa/src/: gen.rs  lib.rs  openapi.rs
(+141 files in other folders)
