[workspace.package]
rust-version = "1.75"

[workspace]
resolver = "2"
members = [
    "utoipa",
    "utoipa-gen",
    "utoipa-swagger-ui-vendored",
    "utoipa-swagger-ui",
    "utoipa-redoc",
    "utoipa-rapidoc",
    "utoipa-scalar",
    "utoipa-axum",
    "utoipa-config",
    "utoipa-actix-web",
]

[workspace.metadata.publish]
order = [
    "utoipa-config",
    "utoipa-gen",
    "utoipa",
    "utoipa-swagger-ui-vendored",
    "utoipa-swagger-ui",
    "utoipa-redoc",
    "utoipa-rapidoc",
    "utoipa-scalar",
    "utoipa-axum",
    "utoipa-actix-web",
]
