[workspace.package]
rust-version = "1.88"

[workspace]
resolver = "2"
members = [
    "utoipa",
    "utoipa-gen",
    "utoipa-swagger-ui-vendored",
    "utoipa-swagger-ui",
    "utoipa-redoc",
    "utoipa-rapidoc",
    "utoipa-scalar",
    "utoipa-axum",
    "utoipa-config",
    "utoipa-actix-web",
]

# cookie 0.18.1 (via rocket_http) does not compile against time 0.3.52+
# (Parsable::parse gained a defaults argument). Cap until cookie releases a fix.
# Keeps `just test` / fresh resolves working without committing Cargo.lock.
[workspace.dependencies]
time = { version = ">=0.3, <0.3.52" }

[workspace.metadata.publish]
order = [
    "utoipa-config",
    "utoipa-gen",
    "utoipa",
    "utoipa-swagger-ui-vendored",
    "utoipa-swagger-ui",
    "utoipa-redoc",
    "utoipa-rapidoc",
    "utoipa-scalar",
    "utoipa-axum",
    "utoipa-actix-web",
]
