[package]
name = "utoipa-axum"
description = "Utoipa's axum bindings for seamless integration for the two"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["utoipa", "axum", "bindings"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true

[features]
debug = []

[dependencies]
axum = { version = "0.7", default-features = false }
utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
    "macros",
] }
tower-service = "0.3"
tower-layer = "0.3.2"
paste = "1.0"

[dev-dependencies]
utoipa = { path = "../utoipa", features = ["debug"] }
axum = { version = "0.7", default-features = false, features = ["json"] }
http = "1.2"
insta = { version = "1.41", features = ["json"] }
serde = "1"
tokio = { version = "1.42", features = ["macros", "rt"]}
tower = "0.5"

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
