[package]
name = "utoipa-corelib"
description = "Utoipa core library"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["openapi", "codegen", "proc-macro", "documentation", "compile-time"]
repository = "https://github.com/juhaku/utoipa"
authors = [
  "Juha Kukkonen <juha7kukkonen@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = "1.0"
quote = "1.0"

[features]
actix_extras = []