[package]
name = "utoipa-gen-actix-web"
description = "Utoipa-gen actix-web extra code generations"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["openapi", "codegen", "proc-macro", "documentation", "compile-time"]
repository = "https://github.com/juhaku/utoipa"
authors = [
  "Juha Kukkonen <juha7kukkonen@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
# quote = "1.0"
proc-macro-error = "1.0"
regex = { version = "1.5" } 
lazy_static = { version = "1.4" }
# uuid = { version = "1", optional = true }
utoipa-corelib = { path = "../utoipa-corelib", features = ["actix_extras"] }

[dev-dependencies]
utoipa = { path = ".." }
serde_json = "1"
serde = "1"
actix-web = { version = "4", features = [ "macros" ], default-features = false }

[features]
debug = []
# actix_extras = ["regex", "lazy_static", "syn/extra-traits"]
chrono = []
chrono_with_format = []
json = []
decimal = []
# uuid = ["dep:uuid"]
time = []
smallvec = []
