[package]
name = "utoipa-gen-actix-web"
description = "utoipa-gen actix-web extra code generations"
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"
readme = "README.md"
keywords = ["codegen", "proc-macro", "documentation", "compile-time", "actix-web-extras"]
repository = "https://github.com/juhaku/utoipa"
authors = [
  "Juha Kukkonen <juha7kukkonen@gmail.com>"
]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro-error = "1.0"
regex = { version = "1.5" } 
lazy_static = { version = "1.4" }
utoipa-corelib = { path = "../utoipa-corelib", version = "0.1", features = ["actix_extras"] }

[dev-dependencies]
utoipa = { path = "..", default-features = false }
serde_json = "1"
serde = "1"
actix-web = { version = "4", features = [ "macros" ], default-features = false }

[features]
debug = []
