[package]
name = "utoipa-gen"
description = "Code generation implementation for utoipa"
version = "3.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["openapi", "codegen", "proc-macro", "documentation", "compile-time"]
repository = "https://github.com/juhaku/utoipa"
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro-error = "1.0"
regex = { version = "1.7", optional = true }
lazy_static = { version = "1.4", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
utoipa = { path = "../utoipa", default-features = false }
serde_json = "1"
serde = "1"
actix-web = { version = "4", features = ["macros"], default-features = false }
axum = "0.6"
paste = "1"
rocket = "0.5.0-rc.2"
smallvec = { version = "1.10.0", features = ["serde"] }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
assert-json-diff = "2"
time = { version = "0.3", features = ["serde-human-readable"] }

[features]
debug = ["syn/extra-traits"]
actix_extras = ["regex", "lazy_static", "syn/extra-traits"]
chrono = []
yaml = []
decimal = []
rocket_extras = ["regex", "lazy_static", "syn/extra-traits"]
uuid = ["dep:uuid"]
axum_extras = ["syn/extra-traits"]
time = []
smallvec = []
repr = []
