[package]
name = "utoipa-rapidoc"
description = "RapiDoc for utoipa"
edition = "2021"
version = "6.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rapidoc", "openapi", "documentation"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["actix-web", "axum", "rocket"]
rustdoc-args = ["--cfg", "doc_cfg"]

[features]
# Pull capped `time` with rocket so cookie 0.18.1 cannot resolve time 0.3.52+.
rocket = ["dep:rocket", "dep:time"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
    "macros",
] }
actix-web = { version = "4", optional = true, default-features = false }
rocket = { version = "0.5", features = ["json"], optional = true }
time = { workspace = true, optional = true }
axum = { version = "0.8.4", default-features = false, features = [
    "json",
], optional = true }

[dev-dependencies]
utoipa-rapidoc = { path = ".", features = ["actix-web", "axum", "rocket"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
