[package]
name = "utoipa-redoc"
description = "Redoc for utoipa"
version = "4.0.1-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["redoc", "openapi", "documentation"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["actix-web", "axum", "rocket"]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
utoipa = { version = "5.0.0-alpha", path = "../utoipa" }
actix-web = { version = "4", optional = true, default-features = false }
rocket = { version = "0.5", features = ["json"], optional = true }
axum = { version = "0.7", default-features = false, optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
