[package]
name = "utoipa-redoc"
description = "Redoc for utoipa"
version = "6.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["redoc", "openapi", "documentation"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true

[package.metadata.docs.rs]
features = ["actix-web", "axum", "rocket", "hyperlane"]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
    "macros",
] }
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", features = ["json"], optional = true }
axum = { version = "0.8.0", default-features = false, optional = true }

[dev-dependencies]
utoipa-redoc = { path = ".", features = ["actix-web", "axum", "rocket", "hyperlane"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
