[package]
name = "utoipa-swagger-ui"
description = "Swagger UI for utoipa"
version = "9.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["swagger-ui", "openapi", "documentation"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true

[features]
default = ["url"]
debug = []
reqwest = ["dep:reqwest"]
url = ["dep:url"]
vendored = ["dep:utoipa-swagger-ui-vendored"]
# cache swagger ui zip
cache = ["dep:dirs", "dep:sha2"]
minified = []
gzip = ["dep:flate2"]

[dependencies]
mime_guess = { version = "2.0" }
actix-web = { version = "4", optional = true, default-features = false, features = [
    "macros",
] }
rocket = { version = "0.5", features = ["json"], optional = true }
axum = { version = "0.8.4", default-features = false, features = [
    "json",
], optional = true }
utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
    "macros",
] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
base64 = { version = "0.22.1" }

[dev-dependencies]
http = "1.4"
similar = "3.1"
tokio = { version = "1", features = ["macros"] }
tower = "0.5"
utoipa-swagger-ui = { path = ".", features = ["actix-web", "axum", "rocket"] }

[package.metadata.docs.rs]
features = ["actix-web", "axum", "rocket", "vendored", "cache"]
no-default-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[build-dependencies]
zip = { version = "8.6", default-features = false, features = ["deflate"] }
regex = "1.12"
flate2 = { version = "1", optional = true }

# used by cache feature
dirs = { version = "6.0", optional = true }
sha2 = { version = "0.11", optional = true }

# enabled optionally to allow rust only build with expense of bigger dependency tree and platform
# independent build. By default `curl` system package is tried for downloading the Swagger UI.
reqwest = { version = "0.13", features = [
    "blocking",
    "rustls",
], default-features = false, optional = true }
url = { version = "2", optional = true }
utoipa-swagger-ui-vendored = { version = "0.1", path = "../utoipa-swagger-ui-vendored", optional = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
