[package]
name = "utoipa-warp"
description = "Utoipa's warp bindings for seamless integration of the two"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["utoipa", "warp", "bindings"]
repository = "https://github.com/juhaku/utoipa"
categories = ["web-programming"]
authors = ["Juha Kukkonen <juha7kukkonen@gmail.com>"]
rust-version.workspace = true
include = [
    "README.md",
    "src/**/*.rs",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGELOG.md",
    "Cargo.toml",
]

[features]
debug = ["utoipa/debug"]
swagger-ui = ["dep:utoipa-swagger-ui"]

[dependencies]
warp = { version = "0.3", default-features = false }
utoipa = { version = "5.0.0", path = "../utoipa", default-features = false, features = [
    "macros",
] }
paste = "1.0"
utoipa-swagger-ui = { version = "9", path = "../utoipa-swagger-ui", optional = true }

[dev-dependencies]
utoipa = { path = "../utoipa", features = ["debug"] }
warp = "0.3"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "doc_cfg"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }
